--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,14 @@
             android:enabled="true"
             android:exported="true"
             android:process=":RpwsPblBtProcess" />
+
+        <service android:name=".device.services.BgNotificationService2"
+            android:label="RPWS Notification Service"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
